# refactored-disco

./: Cargo.toml  README.md
crates/secure_input/: Cargo.toml
crates/secure_input/src/: lib.rs  main.rs
crates/secure_input/tests/: input_handling.rs
docs/: fuzzing.md  template_pr.md
docs/tutorial/: README.md
docs/tutorial/stage01_buggy/: README.md
docs/tutorial/stage01_buggy/crates/secure_input/src/: lib.rs
docs/tutorial/stage02_fuzzing/: README.md
docs/tutorial/stage02_fuzzing/fuzz/: Cargo.toml
docs/tutorial/stage03_fix/: README.md
docs/tutorial/stage03_fix/fuzz/: Cargo.toml
docs/tutorial/stage03_fix/fuzz/fuzz_targets/: sanitize_display_label.rs
fuzz/: Cargo.toml
fuzz/corpus/sanitize_display_label/: nbsp-label
fuzz/fuzz_targets/: parse_positive_u32.rs  read_sanitized_line.rs  sanitize_display_label.rs  sanitize_text.rs
src/: lib.rs
tests/: input_handling.rs
