[package]
name = "secure_input-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.secure_input]
path = ".."

[[bin]]
name = "sanitize_text"
path = "fuzz_targets/sanitize_text.rs"
test = false
doc = false
bench = false

[[bin]]
name = "read_sanitized_line"
path = "fuzz_targets/read_sanitized_line.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_positive_u32"
path = "fuzz_targets/parse_positive_u32.rs"
test = false
doc = false
bench = false
